Tue Jun 24 21:34:15 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c(ole_invoke): fix memory leak.
	  [ruby-bugs-20792]

Mon Jun 23 19:59:04 2008  Akinori MUSHA  <knu@iDaemons.org>

	* eval.c (PUSH_FRAME, PUSH_CLASS): Add volatile to avoid a
	  possible optimization bug on OS X/PPC.  This at least makes
	  build with gcc -O1 and `make test' pass.

Mon Jun 23 11:17:24 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, common.mk, {win,bcc}32/Makefile.sub (revision.h): auto
	  update.  [ruby-core:17373]

Sun Jun 22 14:16:28 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/readline/extconf.rb (have_readline_func): readline on Mac OS X
	  needs headers to detect some functions.

Sun Jun 22 10:07:20 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (STRINGIZE, NO_STRING_LITERAL_CONCATENATION): added
	  check.  [ruby-dev:34883]

	* version.c (ruby_description, ruby_copyright): made constants if
	  possible.

	* defines.h (STRINGIZE): default definition for C89.

Sun Jun 22 09:51:14 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_class_superclass): rdoc improvement, a patch from
	  Gaston Ramos <ramos.gaston AT gmail.com> in [ruby-core:17371].

Sun Jun 22 07:16:42 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_buf_cat): check for self concatenation.

Sat Jun 21 15:57:15 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/parsers/parse_rb.rb (RDoc#collect_first_comment): skip
	  magic comment.

Fri Jun 20 18:16:01 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_buf_append): should infect.

Fri Jun 20 15:40:02 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_store, rb_ary_splice): not depend on unspecified
	  behavior at integer overflow.

	* string.c (str_buf_cat): ditto.

Wed Jun 18 22:17:35 2008  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* array.c (ary_new, rb_ary_initialize, rb_ary_store,